.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glfarule__c.object
<CustomObject>
    <description>glfarule__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <description>externalid__c</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glfarule_glcmp__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfarule_declbal__c</fullName>
        <description>glfarule_declbal__c</description>
        <inlineHelpText>Rate at which depreciation value is calculated when depreciation method is equal to ‘Declining Balance’.Values are 100%, 150% and 200%. This field is not applicable for other depreciation methods.</inlineHelpText>
        <label>Declining Balance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>200%</fullName>
                </value>
                <value>
                    <fullName>150%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfarule_deprconvention__c</fullName>
        <description>glfarule_deprconvention__c</description>
        <inlineHelpText>Determines when &amp; how depreciation is calculated for the year when the fixed asset is acquired and for the year when the fixed asset is disposed of. Value available is Full Month.</inlineHelpText>
        <label>Depreciation Convention</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Month</fullName>
                    <default>true</default>
                    <label>Full Month</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfarule_deprmethod__c</fullName>
        <description>glfarule_deprmethod__c</description>
        <inlineHelpText>Indicates the method used for calculating the asset’s depreciation value. Depreciation methods that can be chosen are Straight Line, Declining Balance, Sum of Years, MACRS (Modified Accelerated Cost Recovery System) and User Defined methods.</inlineHelpText>
        <label>Depreciation Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Straight Line</fullName>
                </value>
                <value>
                    <fullName>Declining Balance</fullName>
                </value>
                <value>
                    <fullName>Sum of Years</fullName>
                </value>
                <value>
                    <fullName>User Defined</fullName>
                </value>
                <value>
                    <fullName>MACRS</fullName>
                    <isActive>false</isActive>
                    <label>MACRS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfarule_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfarule_glcmp__c</description>
        <inlineHelpText>Financial company associated with this depreciating rule set. It has a lookup to GL Company.</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Fixed Asset Depreciation Rule Sets</relationshipLabel>
        <relationshipName>glfarules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions__c</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Fixed Asset Depreciation Rule Set</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfarule_glcmp__c</columns>
        <columns>rstkf__glfarule_deprconvention__c</columns>
        <columns>rstkf__glfarule_deprmethod__c</columns>
        <columns>rstkf__glfarule_declbal__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__Depreciation_Rule_Declining_Balance</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfarule_glcmp__c</columns>
        <columns>rstkf__glfarule_deprmethod__c</columns>
        <columns>rstkf__glfarule_declbal__c</columns>
        <columns>rstkf__glfarule_deprconvention__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfarule_deprmethod__c</field>
            <operation>equals</operation>
            <value>Declining Balance</value>
        </filters>
        <label>Depreciation Rule - Declining Balance</label>
    </listViews>
    <listViews>
        <fullName>rstkf__Depreciation_Rule_Straight_Line</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfarule_glcmp__c</columns>
        <columns>rstkf__glfarule_deprconvention__c</columns>
        <columns>rstkf__glfarule_deprmethod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfarule_deprmethod__c</field>
            <operation>equals</operation>
            <value>Straight Line</value>
        </filters>
        <label>Depreciation Rule - Straight Line</label>
    </listViews>
    <listViews>
        <fullName>rstkf__Depreciation_Rule_Sum_of_the_Years</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfarule_glcmp__c</columns>
        <columns>rstkf__glfarule_deprconvention__c</columns>
        <columns>rstkf__glfarule_deprmethod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfarule_deprmethod__c</field>
            <operation>equals</operation>
            <value>Sum of Years</value>
        </filters>
        <label>Depreciation Rule - Sum of the Years</label>
    </listViews>
    <listViews>
        <fullName>rstkf__Depreciation_Rule_User_Defined</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfarule_glcmp__c</columns>
        <columns>rstkf__glfarule_deprmethod__c</columns>
        <columns>rstkf__glfarule_declbal__c</columns>
        <columns>rstkf__glfarule_deprconvention__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfarule_deprmethod__c</field>
            <operation>equals</operation>
            <value>User Defined</value>
        </filters>
        <label>Depreciation Rule - User Defined</label>
    </listViews>
    <nameField>
        <label>Fixed Asset Depreciation Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fixed Asset Depreciation Rule Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>